# backend/controllers/assinaturaController.js
@@ -1,29 +1,32 @@
 
 const AssinaturaModel = require('../models/assinaturaModel');
+const PlanosModel = require("../models/planosModel");
 
 const stripe = require('stripe')('sk_test_51NuhsfKJ4ExSCfWr7N7tsD8LhsqlRPm0CnHn8TxIoAZkRJsOSGaofgS9TxFHA2AWTcmZMzuKhyh0qotNfGRq7jYn0048B8tPws');
 
 class PagamentoController {
     async checkout(req, res) {
-        if(req.body.valor != "" && req.body.plano != "" && req.body.nome != "" && req.body.planoId != "" && req.body.usuId != "" ){
+        if( req.body.nome != "" && req.body.planoId != "" && req.body.usuId != "" ){
+          let plano = new PlanosModel();
+          plano = await plano.obter(req.body.planoId);
             const session = await stripe.checkout.sessions.create({
                 line_items: [
                   {
                     price_data: {
                       currency: 'brl', //ou usd
                       product_data: {
-                        name: `Pagamento referente ao plano ${req.body.plano} do usuário ${req.body.nome}`,
+                        name: `Pagamento referente ao plano ${plano.nome} do usuário ${req.body.nome}`,
                       },
-                      unit_amount: parseInt(req.body.valor),
+                      unit_amount: parseInt(plano.valor.replace(".",'')),
                     },
                     quantity: 1,
                   },
                 ],
                 mode: 'payment',
-                success_url: `http://localhost:3000/cliente/pagamento-sucesso/`,
-                cancel_url: `http://localhost:3000/`,
+                success_url: `http://localhost:3000/cliente/pagamento-sucesso/${req.body.usuId}/${req.body.planoId}`,
+                cancel_url: `http://localhost:3000/teste`,
               });
-              res.redirect(303, session.url);       
+              res.status(200).json({url: session.url}); 
       }
         else{
             res.status(400).json({msg: "Parâmetros inválidos!"});        }
